# blacklist

./: README.md  pyproject.toml  requirements.txt
api/: __init__.py
blacklist_app/: main.py
blacklist_app/api/: customers.py
blacklist_app/db/models/: customers.py  reasons.py
blacklist_app/schemas/: __init__.py  customers.py  reasons.py
blacklist_app/tests/: __init__.py
db/models/: __init__.py
services/: __init__.py
